# mini-kernel-64

./: Makefile.am  bootstrap  configure.ac  grub.cfg
extras/tools/: bootstrap  packages.mak  tools.mak
kernel/: Makefile.am  io_port.h  kmain.c  kstatus.h  linker.ld  serial.c  serial.h
kernel/boot/: Makefile.am  _start.inc  bootstrap32.asm  bootstrap64.asm  realm64.asm
kernel/boot/multiboot/: multiboot2.asm  multiboot2.inc
